<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.javacs</groupId>
	<artifactId>javac-services</artifactId>
	<packaging>jar</packaging>
	<version>0.1-SNAPSHOT</version>
	<distributionManagement>
		<repository>
			<id>distribution-repository</id>
			<name>Temporary Staging Repository</name>
			<url>file://${basedir}/dist</url>
		</repository>
	</distributionManagement>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.8.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<!-- JSON support -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.5</version>
		</dependency>
		<!-- Protobuf support -->
		<dependency>
			<groupId>com.google.protobuf</groupId>
			<artifactId>protobuf-java</artifactId>
			<version>3.9.1</version>
		</dependency>
		<!-- LSP4J support -->
		<dependency>
			<groupId>org.eclipse.lsp4j</groupId>
			<artifactId>org.eclipse.lsp4j</artifactId>
			<version>0.12.0</version>
		</dependency>
		<!-- Xtend Support -->
		<dependency>
			<groupId>org.eclipse.xtend</groupId>
			<artifactId>org.eclipse.xtend.lib</artifactId>
			<version>2.25.0</version>
		</dependency>
		<!-- Testing framework -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>
		<!-- Benchmarking -->
		<dependency>
			<groupId>org.openjdk.jmh</groupId>
			<artifactId>jmh-core</artifactId>
			<version>1.21</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.openjdk.jmh</groupId>
			<artifactId>jmh-generator-annprocess</artifactId>
			<version>1.21</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
					</compilerArgs>
					<!-- Workaround of https://issues.apache.org/jira/browse/MCOMPILER-369 -->
					<annotationProcessorPaths>
						<path>
							<groupId>org.openjdk.jmh</groupId>
							<artifactId>jmh-generator-annprocess</artifactId>
							<version>1.21</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.xtend</groupId>
				<artifactId>xtend-maven-plugin</artifactId>
				<version>2.25.0</version>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
							<goal>testCompile</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.basedir}/src/main/xtend-gen</outputDirectory>
							<testOutputDirectory>${project.basedir}/test/xtend-gen</testOutputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- Package as single jar -->
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<outputDirectory>${project.basedir}/dist/classpath</outputDirectory>
					<finalName>jls</finalName>
					<archive>
						<manifest>
							<mainClass>org.javacs.Main</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
			</plugin>
		</plugins>
	</build>
</project>